7107883: getNetworkPrefixLength() does not return correct prefix length

Reviewed-by: alanb, michaelm